welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: '(' expected but identifier found.
if estDosMur():True {
   ^Program:6: error: illegal start of simple expression
	}
        ^